# UnpluggedAudiobookPlayer

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  libmpv_handler.rs  logger.rs  main.rs  mc_os_interface.rs  tui.rs
src/tui/: commands.rs  keybindings.rs
