[package]
name = "unplugged_audiobook_player"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
libmpv2 = "4.1.0"
log = { version = "0.4.27", features = ["std"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"

[target.'cfg(not(target_os="android"))'.dependencies]
souvlaki = "0.8.3"
