[package]
name = "unplugged_audiobook_player"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossbeam = "0.8.4"
libmpv2 = "5.0.1"
log = { version = "0.4.27", features = ["std"] }
phf = { version = "0.13.1", features = ["macros"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
windows-async = "0.2.1"

[target.'cfg(not(target_os="android"))'.dependencies]
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
